--- a/index.html
+++ b/index.html
@@ -9,27 +9,28 @@
 </head>
 <body>
 
-
+<nav>
 <div class="menu">
 
-<div class="logo">
     <img src="img.svg" alt="">
-</div>
 
 <div class="list">
-    <li>inicio</li> 
-    <li>sobre nós</li>
-    <li>produtos</li>
-    <li>serviços</li>
-    <li>contato</li>
+    <ul>
+    <a href=""><li>inicio</li></a>   
+    <a href=""><li>sobre nós</li></a>
+    <a href=""><li>produtos</li></a>
+    <a href=""><li>serviços</li></a>
+    <a href=""><li>contato</li></a>
+    </ul>
 </div>
 
 
 <div class="amp">
-    <img src="int.svg" alt="">
+    <img src="insta.svg" alt="">
     <img src="face.svg" alt="">
 </div>
-</div>
 
+</div>
+</nav>
 </body>
 </html>
